# University

./: README.md
First Year/First Semester/Fundaments of Programming/: README.md
First Year/First Semester/Fundaments of Programming/p5_organizare_evenimente/: .project  App_start.py  Evenimente.txt  Inscrieri.txt  Persoane.txt  RepositoryPersoane.txt  Sortari.py  Stocare.txt  auxiliar.txt
First Year/Second Semester/Data Structures and Algorithms/: README.md
First Year/Second Semester/Data Structures and Algorithms/Lab1 - TAD Colectie/: CMakeLists.txt
First Year/Second Semester/Data Structures and Algorithms/Lab1 - TAD Colectie/Proiect C++/Colectie (cu rel)/: Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h
First Year/Second Semester/Data Structures and Algorithms/Lab3 - TAD Dictionar Ordonat/: CMakeLists.txt
First Year/Second Semester/Data Structures and Algorithms/Lab3 - TAD Dictionar Ordonat/Proiect C++/: App.cpp  DO.cpp  DO.h  Iterator.cpp  Iterator.h
First Year/Second Semester/Data Structures and Algorithms/Lab3 - TAD Dictionar Ordonat/Teste/: TestExtins.cpp  TestScurt.cpp  TestScurt.h
First Year/Second Semester/Data Structures and Algorithms/Lab4 - TAD Multidictionar/: CMakeLists.txt
First Year/Second Semester/Data Structures and Algorithms/Lab4 - TAD Multidictionar/Proiect C++/: App.cpp  IteratorMD.cpp  IteratorMD.h  MD.cpp  MD.h
First Year/Second Semester/Data Structures and Algorithms/Lab4 - TAD Multidictionar/Teste/: TestExtins.cpp  TestScurt.cpp  TestScurt.h
First Year/Second Semester/Data Structures and Algorithms/Lab6 - TAD Colectie/: CMakeLists.txt
First Year/Second Semester/Data Structures and Algorithms/Lab7 - TAD Matrice/: CMakeLists.txt
First Year/Second Semester/Data Structures and Algorithms/Lab7 - TAD Matrice/Proiect C++/: App.cpp  Matrice.cpp  Matrice.h
First Year/Second Semester/Data Structures and Algorithms/Lab7 - TAD Matrice/Teste/: TestExtins.cpp  TestScurt.cpp
First Year/Second Semester/Dynamic Systems/Lab1/: Untitled.ipynb
First Year/Second Semester/Dynamic Systems/Lab2/: Untitled.ipynb
First Year/Second Semester/Dynamic Systems/Lab3/: Untitled.ipynb
First Year/Second Semester/Geometry/: Problema 12.7 - v2.docx  Problema 3.5.docx  Problema 9.2.docx
Second Year/First Semester/Computer Networks/: README.md  tema.txt
Second Year/First Semester/Functional and Logical Programming/: README.md
Second Year/Second Semester/Software Engineering/: Theatre Reservation System.docx
(+165 files in other folders)
